deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ledger-api
  labels:
    # Enforce baseline to allow Istio sidecars to initialize successfully
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    # Warn and Audit on restricted to surface security recommendations
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
