deploy/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: ledger-api
  namespace: ledger-api 
spec:
  selector:
    app: ledger-api
  ports:
    - port: 8080
      targetPort: 8080
